assets/index.css
html {
  font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  color: #24292e;
}

body {
  /* prevent premature breadcrumb wrapping on mobile */
  min-width: 500px;
  margin: 0;
}

.hidden {
  display: none !important;
}

.head {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 0.6em 1em;
  position: fixed;
  width: 100%;
  background-color: white;
}

.breadcrumb {
  font-size: 1.25em;
  padding-right: 0.6em;
}

.breadcrumb>a {
  color: #0366d6;
  text-decoration: none;
}

.breadcrumb>a:hover {
  text-decoration: underline;
}

/* final breadcrumb */
.breadcrumb>b {
  color: #24292e;
}

.breadcrumb>.separator {
  color: #586069;
  padding: 0 0.25em;
}

.breadcrumb svg {
  height: 100%;
  fill: rgba(3, 47, 98, 0.5);
}

.toolbox {
  display: flex;
  margin-right: 10px;
}

.toolbox > a,
.toolbox > div {
  /* vertically align with breadcrumb text */
  height: 1.1rem;
}

.toolbox .control {
  cursor: pointer;
  padding-left: 0.25em;
}

.upload-file input {
  display: none;
}

.searchbar {
  display: flex;
  flex-wrap: nowrap;
  width: 246px;
  height: 22px;
  background-color: #fafafa;
  transition: all .15s;
  border: 1px #ddd solid;
  border-radius: 15px;
  margin-bottom: 2px;
}

.searchbar #search {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  font-size: 16px;
  line-height: 16px;
  padding: 1px;
  background-color: transparent;
  border: none;
  outline: none;
}

.searchbar .icon {
  color: #9a9a9a;
  padding: 3px 3px;
  cursor: pointer;
}

.upload-status span {
  width: 70px;
  display: inline-block;
}

.main {
  padding: 3.3em 1em 0;
}

.empty-folder {
  font-style: italic;
}

.uploaders-table th,
.paths-table th {
  text-align: left;
  font-weight: unset;
  color: #5c5c5c;
  white-space: nowrap;
}

.uploaders-table td,
.paths-table td {
  white-space: nowrap;
}

.uploaders-table .cell-status {
  width: 80px;
  padding-left: 0.6em;
}

.paths-table thead a {
  color: unset;
  text-decoration: none;
}

.paths-table thead a>span {
  padding-left: 2px;
}

.paths-table tbody tr:hover {
  background-color: #fafafa;
}

.paths-table .cell-actions {
  width: 75px;
  display: flex;
  padding-left: 0.6em;
}

.paths-table .cell-mtime {
  width: 120px;
  padding-left: 0.6em;
}

.paths-table .cell-size {
  text-align: right;
  width: 70px;
  padding-left: 0.6em;
}

.path svg {
  height: 16px;
  fill: rgba(3, 47, 98, 0.5);
  padding-right: 0.5em;
  vertical-align: text-top;
}

.path {
  list-style: none;
}

.path a {
  color: #0366d6;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: block;
  text-decoration: none;
  max-width: calc(100vw - 375px);
  min-width: 200px;
}

.path a:hover {
  text-decoration: underline;
}

.action-btn {
  padding-right: 0.3em;
  cursor: pointer;
}

.uploaders-table {
  padding: 0.5em 0;
}

.uploader {
  padding-right: 1em;
}

.editor {
  width: 100%;
  height: calc(100vh - 5rem);
  border: 1px solid #ced4da;
  outline: none;
}

.toolbox2 {
  margin-left: auto;
  margin-right: 2em;
}

.save-btn {
  cursor: pointer;
  user-select: none;
}

.not-editable {
  font-style: italic;
}

@media (min-width: 768px) {
  .path a {
    min-width: 400px;
  }
}

/* dark theme */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #000;
  }

  html,
  .breadcrumb>b,
  .searchbar #search {
    color: #fff;
  }

  .uploaders-table th,
  .paths-table th {
    color: #ddd;
  }

  svg,
  .path svg,
  .breadcrumb svg {
    fill: #fff;
  }

  .head {
    background-color: #111;
  }

  .searchbar {
    background-color: #111;
    border-color: #fff6;
  }

  .searchbar svg {
    fill: #fff6;
  }

  .path a {
    color: #3191ff;
  }

  .paths-table tbody tr:hover {
    background-color: #1a1a1a;
  }
}

